[package]
name = "win32_rawinput"
version = "0.1.0"
authors = ["Sid"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
widestring = "*"
winapi = {version = '0.3.8', features = ["winuser"]}
user32-sys = '0.2'
kernel32-sys = '0.2'
